--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   <body>
     <div class="main-div">
       <nav>
-        <img src="./images/logo.svg" alt="logo" />
+        <img src="./images/logo.svg" alt="logo" class="nav-image" />
         <div class="nav-items">
+          <li class="close-btn" onclick="closeNav()" style="font-size: 35px;">&times;</li>
           <h5 class="nav-item">HOME</h5>
           <h5 class="nav-item">ABOUT</h5>
           <h5 class="nav-item">HISTORY</h5>
@@ -25,6 +26,9 @@
           <h5 class="nav-item">CONTACT</h5>
         </div>
         <button class="signin-btn">SIGN IN</button>
+        <div class="hamburger">
+          <span onclick="openNav()" style="font-size: 35px;">&#9776;</span>
+      </div>
       </nav>
       <div class="intro-section">
         <div class="left-section">
@@ -47,5 +51,14 @@
         </div>
       </div>
     </div>
+    <script>
+      function openNav() {
+        document.querySelector(".nav-items").style.width = "250px";
+      }
+      
+      function closeNav() {
+        document.querySelector(".nav-items").style.width = "0";
+      }
+  </script>
   </body>
 </html>
